# zinger_swerve_controller

./: README.md  package.xml  setup.cfg  setup.py
.github/workflows/: to_kanban.yml
config/: swerve.yaml
launch/: swerve_controller.launch.py
test/: test_control_model.py  test_control_profile.py  test_copyright.py  test_profile.py
zinger_swerve_controller/: control.py  control_model.py  control_profile.py  controller.py  drive_module.py  errors.py  geometry.py  profile.py  states.py  steering_controller.py  swerve_controller.py
