<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zinger_swerve_controller</name>
  <version>0.1.0</version>
  <description>The swerve drive controller for the Zinger robot.</description>
  <maintainer email="petrikvandervelde@gmail.com">petrik</maintainer>
  <license>Apache-2.0</license>

  <!-- Messages -->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>tf_transformations</depend>

  <!-- test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
